<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selections_root"
    tools:visibility="visible"
    android:visibility="invisible"
    android:background="@drawable/collections">

</androidx.constraintlayout.widget.ConstraintLayout>